# Vent4D-mech

./: CLAUDE.md  LICENSE  PHASE3_VALIDATION_SUMMARY.md  README.md  performance_test.py  phase2_validation_report.json  phase3_completion_report.md  pyproject.toml  pytest.ini  requirements.txt  serena_use.md  setup.py  test_phase3_comprehensive.py
.serena/: project.yml
.serena/memories/: code_review_intention.md  code_style_conventions.md  development_guidelines.md  implementation_priorities.md  module_interfaces.md  project_overview.md  suggested_commands.md  testing_strategy.md
config/: default.yaml
docs/: AI-ASSISTANT-INSTRUCTIONS.md  DEVELOPMENT-REFERENCE.md  INST-code-rev.md  Python 기반 폐 조직 역학 모델링 개발.txt  dev_plan1.md
examples/: basic_pipeline.py
src/: pipeline.py  plan.md  progress.md
src/config/: config_validation.py
src/core/: __init__.py  exceptions.py  types.py
src/core/deformation/: strain_calculator.py  strain_tensor.py
src/core/fem/: __init__.py  boundary_conditions.py  fem_workflow.py  finite_element_solver.py  material_models.py  mock_fem_solver.py  post_processing.py
src/core/inverse/: __init__.py  inverse_solver.py  optimization_utils.py  youngs_modulus_estimator.py
src/core/mechanical/: __init__.py  constitutive_models.py  hyperelastic_models.py  material_fitting.py  mechanical_modeler.py
src/core/microstructure/: __init__.py  atlas_integration.py  homogenization.py  microstructure_db.py  rve_analysis.py
src/core/registration/: __init__.py  deformable_registration.py  image_preprocessing.py  image_registration.py  registration_utils.py  simpleitk_registration.py  voxelmorph_registration.py
src/core/ventilation/: __init__.py  validation_tools.py  ventilation_calculation.py
src/utils/: cache.py  io_utils.py  parallel.py  performance_utils.py  quality_gates.py
tests/: __init__.py  conftest.py  test_core_modules.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_base_component.py  test_config.py  test_mechanical.py  test_utils.py
vent4d_mech/: __init__.py  pipeline.py
vent4d_mech.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
vent4d_mech/config/: __init__.py  config_manager.py  config_validation.py  default_config.py  schemas.py
vent4d_mech/core/: base_component.py
vent4d_mech/core/deformation/: __init__.py  deformation_analyzer.py  deformation_field.py  deformation_utils.py  mesh_deformation.py  strain_calculator.py
vent4d_mech/core/fem/: __init__.py  fem_workflow.py  finite_element_solver.py  mesh_generation.py
vent4d_mech/core/inverse/: __init__.py  parameter_estimation.py  regularization.py  youngs_modulus_estimator.py
vent4d_mech/core/mechanical/: __init__.py  mechanical_modeler.py  stress_calculator.py  tissue_mechanics.py
vent4d_mech/core/microstructure/: __init__.py  hoa_integration.py  microstructure_db.py  rve_analysis.py  surrogate_models.py
vent4d_mech/core/registration/: __init__.py  image_registration.py  simpleitk_registration.py  voxelmorph_registration.py
vent4d_mech/core/ventilation/: __init__.py  clinical_metrics.py  regional_analysis.py  ventilation_calculator.py
vent4d_mech/utils/: __init__.py  image_utils.py  logging_utils.py  validation_utils.py  visualization.py
